[package]
name = "kvserver"
version = "0.1.0"
authors = ["Styvane Soukossi <styvane@acm.org>"]
edition = "2018"


[[bin]]
name = "kvserver-client"
path = "bin/client.rs"


[dependencies]
structopt = "0.3"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyline = "8.0.0"
anyhow = "1.0"

[dependencies.raft-utils]
path = "../raft-utils"


[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]