[package]
name = "kvserver"
version = "0.1.0"
authors = ["Styvane Soukossi <styvane@acm.org>"]
edition = "2018"


[[bin]]
name = "kvserver-client"
path = "bin/client.rs"


[dependencies]
structopt = "0.3"
serde_json = "1.0"
rustyline = "8.0.0"
anyhow = "1.0"
serde =  { version = "1.0", features = ["derive"] }
futures = "0.3"
async-std = { version = "1.9", features = ["attributes"] }


raft-utils = { path = "../raft-utils" }
raft-core = { path = "../raft-core" }

