[package]
name = "kvserver"
version = "0.1.0"
authors = ["Styvane Soukossi <styvane@acm.org>"]
edition = "2021"


[[bin]]
name = "kvserver-client"
path = "bin/client.rs"


[dependencies]
structopt = "0.3"
serde_json = { workspace = true }
rustyline = "8.0.0"
anyhow = { workspace = true }
serde =  { workspace = true }
futures = { workspace = true }
async-std = { workspace = true }
log = "0.4.0"
log4rs = "1.0.0"

raft-utils = { path = "../raft-utils" }
raft-core = { path = "../raft-core" }

