[package]
name = "raft-core"
version = "0.1.0"
authors = ["Styvane Soukossi <styvane@acm.org>"]
edition = "2018"


[dependencies]
anyhow = "1.0"
config = "0.11"
serde_json = "1.0"
rand = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
log = "0.4.0"
log4rs = "1.0.0"
async-std = { version = "1.9", features = ["attributes"] }
raft-utils = { path = "../raft-utils" }


