[package]
name = "raft-core"
version = "0.1.0"
authors = ["Styvane Soukossi <styvane@acm.org>"]
edition = "2021"
rust-version = "1.64"

[dependencies]
anyhow = { workspace = true }
config = "0.11"
serde_json = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
log = "0.4.0"
log4rs = "1.0.0"
async-std = { workspace = true }
raft-utils = { path = "../raft-utils" }


