[package]
authors = ["Styvane Soukossi <styvane@acm.org>"]
edition = "2021"
name = "raft-core"
rust-version = "1.64"
version = "0.1.0"

[dependencies]
anyhow = {workspace = true}
async-std = {workspace = true}
config = "0.11"
futures = {workspace = true}
log = "0.4.0"
log4rs = "1.0.0"
raft-utils = {path = "../raft-utils"}
rand = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
